<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home_37"
        android:title="@string/home" />

    <item
        android:id="@+id/bottom_game"
        android:icon="@drawable/game_controller_37"
        android:title="@string/game" />

    <item
        android:id="@+id/bottom_stats"
        android:icon="@drawable/stats_37"
        android:title="@string/stats" />

    <item
        android:id="@+id/bottom_leaderboard"
        android:icon="@drawable/earth_37"
        android:title="@string/leaderboard" />


</menu>
