...
    tools:context=".MainActivity">

<!-- RelativeLayout ensures that the BottomNavigationView stays at the bottom -->

<!-- Layout for other content that needs to be above the BottomNavigationView -->
    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomNavigation"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
...
            android:layout_marginBottom="4dp"
            android:text="@string/today_s_game_pick"
            android:textStyle="bold"
            android:textSize="25sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/todaysGamePick"
            android:layout_width="match_parent"
            android:layout_height="157dp">

            <include
                layout="@layout/viewholder_game"
                android:layout_width="match_parent"
...
